ShoppingCartProductServiceImplementation implemented alongside required dto